--- a/react-webpack/public/backend/templates/administrator/admin_manage_field.html
+++ b/react-webpack/public/backend/templates/administrator/admin_manage_field.html
@@ -80,33 +80,30 @@
               >
                 <li class="flex flex-row justify-between py-2">
                   {% include
-                  'administrator/components/admin_manage_field_field_card.html'
+                  'administrator/components/admin_manage_field_field_card/admin_manage_field_field_card.html'
                   %} {% include
-                  'administrator/components/admin_manage_field_field_card.html'
+                  'administrator/components/admin_manage_field_field_card/admin_manage_field_field_card_1.html'
                   %}
                 </li>
                 <li class="flex flex-row justify-between py-2">
                   {% include
-                  'administrator/components/admin_manage_field_field_card.html'
+                  'administrator/components/admin_manage_field_field_card/admin_manage_field_field_card_2.html'
                   %} {% include
-                  'administrator/components/admin_manage_field_field_card.html'
+                  'administrator/components/admin_manage_field_field_card/admin_manage_field_field_card_3.html'
                   %}
                 </li>
                 <li class="flex flex-row justify-between py-2">
                   {% include
-                  'administrator/components/admin_manage_field_field_card.html'
+                  'administrator/components/admin_manage_field_field_card/admin_manage_field_field_card_4.html'
                   %} {% include
-                  'administrator/components/admin_manage_field_field_card.html'
+                  'administrator/components/admin_manage_field_field_card/admin_manage_field_field_card_5.html'
                   %}
                 </li>
               </ul>
 
               <!-- Read More -->
               <div class="flex flex-col items-center">
-                <a
-                  href="/admin_transaction_history"
-                  class="text-gray-600 hover:text-gray-800"
-                >
+                <a href="#" class="text-gray-600 hover:text-gray-800">
                   Xem thêm...
                 </a>
               </div>
@@ -163,10 +160,7 @@
 
               <!-- Read More -->
               <div class="flex flex-col items-center">
-                <a
-                  href="/admin_transaction_history"
-                  class="text-gray-600 hover:text-gray-800"
-                >
+                <a href="#" class="text-gray-600 hover:text-gray-800">
                   Xem thêm...
                 </a>
               </div>
@@ -181,10 +175,7 @@
                 <h2 class="text-lg font-semibold">Lợi nhuận</h2>
                 <!-- Read More -->
                 <div class="flex flex-col items-center">
-                  <a
-                    href="/admin_transaction_history"
-                    class="text-gray-600 hover:text-gray-800"
-                  >
+                  <a href="#" class="text-gray-600 hover:text-gray-800">
                     Xem thêm...
                   </a>
                 </div>
