--- a/react-webpack/public/backend/templates/administrator/components/admin_manage_field_field_card/admin_manage_field_field_card.html
+++ b/react-webpack/public/backend/templates/administrator/components/admin_manage_field_field_card/admin_manage_field_field_card.html
@@ -1,6 +1,6 @@
-<!-- Field Card -->
 <div
-  class="flex flex-col bg-gray-100 p-4 rounded-lg gap-2 shadow hover:shadow-lg transition duration-200"
+  class="flex flex-col bg-gray-100 p-4 rounded-lg gap-2 shadow hover:shadow-lg transition duration-200 field-card"
+  data-field-name="Sân bóng đá trong nhà Bắc Sài Gòn"
   style="width: 315px; height: 270px"
 >
   <img
