--- a/react-webpack/public/backend/templates/administrator/admin_statistics.html
+++ b/react-webpack/public/backend/templates/administrator/admin_statistics.html
@@ -144,10 +144,7 @@
           </div>
           <!-- Read More -->
           <div class="flex flex-col items-center">
-            <a
-              href="/admin_transaction_history"
-              class="text-gray-600 hover:text-gray-800"
-            >
+            <a href="#" class="text-gray-600 hover:text-gray-800">
               Xem thêm...
             </a>
           </div>
