Finish owner screen and testing initial

--- a/react-webpack/public/backend/static/css/owner_managefield.css
+++ b/react-webpack/public/backend/static/css/owner_managefield.css
@@ -14,6 +14,7 @@ body {
     color: white;
     height: 40px;
     position: fixed; /* Make the header fixed */
+    z-index: 1000;
 }
 .logo-container {
     display: flex;
