--- a/react-webpack/public/backend/templates/owner_dashboard.html
+++ b/react-webpack/public/backend/templates/owner_dashboard.html
@@ -33,7 +33,7 @@
         <ul>
             <li class = "active"><a href="#"><img src="../static/images/globe.png" alt="Home"> Trang Chủ</a></li>
             <hr> 
-            <li><a href="#"><img src="../static/images/icon_book_field.png" alt="Field Management"> Quản Lý Sân</a></li>
+            <li><a href="owner_managefield.html"><img src="../static/images/icon_book_field.png" alt="Field Management"> Quản Lý Sân</a></li>
             <hr> 
             <li><a href="#"><img src="../static/images/Date_range.png" alt="Calendar"> Lịch</a></li>
             <hr> 
