--- a/react-webpack/public/backend/templates/owner_managefield.html
+++ b/react-webpack/public/backend/templates/owner_managefield.html
@@ -31,7 +31,7 @@
     </header>
     <div class="sidebar">
         <ul>
-            <li><a href="#"><img src="../static/images/globe.png" alt="Home"> Trang Chủ</a></li>
+            <li><a href="owner_dashboard.html"><img src="../static/images/globe.png" alt="Home"> Trang Chủ</a></li>
             <hr> 
             <li class = "active"><a href="#"><img src="../static/images/icon_book_field.png" alt="Field Management"> Quản Lý Sân</a></li>
             <hr> 
@@ -119,13 +119,14 @@
                 <h2>Sân của tôi</h2>
                 <div class="field-controls">
                     <input type="text" placeholder="Search" class="search-bar">
-                    <button class="add-field-btn">+</button>
+                    <button class="add-field-btn" onclick="window.location.href='owner_register_field.html';">+</button>
                     <button class="filter-btn">🔍 Lọc</button>
                 </div>
             </div>
             <div class="field-list">
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -136,7 +137,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -147,7 +149,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -158,7 +161,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -169,7 +173,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -180,7 +185,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -191,7 +197,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -202,7 +209,8 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <img src="../static/images/field1.png" alt="Field Image" class="field-image">
+                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
                         <p>
@@ -225,10 +233,6 @@
             </div>
         </div>
     </div>
-    
-    
-        
-    
     <!-- Your content here -->
     <script src="../static/effect/owner_managefield.js"></script>
 </body>
