2pm 09/01/2025 hot fix

--- a/react-webpack/public/backend/templates/owner_configure_field.html
+++ b/react-webpack/public/backend/templates/owner_configure_field.html
@@ -48,7 +48,7 @@
                 <!-- Block 1: Field Name -->
                 <div class="form-block">
                     <label for="field-name">Tên sân</label>
-                    <input type="text" id="field-name" name="field-name" value="Clb Sân Bóng Đá Mini 77">
+                    <input type="text" id="field-name" name="field-name" value="Sân bóng đá trong nhà Lý Chính Thắng">
                 </div>
         
                 <!-- Block 2: Address -->
@@ -92,7 +92,7 @@
                 <div class="form-buttons">
                     <button type="button" class="cancel-button" onclick="window.location.href='owner_managefield.html';">Hủy</button>
 
-                    <button type="button" class="save-button" onclick="window.location.href='owner_managefield.html';">Đăng ký</button>
+                    <button type="button" class="save-button" onclick="window.location.href='owner_managefield.html';">Lưu</button>
                 </div>
             </form>
         </div>
