--- a/react-webpack/public/backend/templates/owner_managefield.html
+++ b/react-webpack/public/backend/templates/owner_managefield.html
@@ -125,7 +125,7 @@
             </div>
             <div class="field-list">
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -197,7 +197,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
