--- a/react-webpack/public/backend/templates/owner_view_field_more.html
+++ b/react-webpack/public/backend/templates/owner_view_field_more.html
@@ -31,9 +31,9 @@
     </header>
     <div class="sidebar">
         <ul>
-            <li><a href="#"><img src="../static/images/globe.png" alt="Home"> Trang Chủ</a></li>
+            <li><a href="owner_dashboard.html"><img src="../static/images/globe.png" alt="Home"> Trang Chủ</a></li>
             <hr> 
-            <li class = "active"><a href="#"><img src="../static/images/icon_book_field.png" alt="Field Management"> Quản Lý Sân</a></li>
+            <li class = "active"><a href="owner_managefield.html"><img src="../static/images/icon_book_field.png" alt="Field Management"> Quản Lý Sân</a></li>
             <hr> 
             <li><a href="#"><img src="../static/images/Date_range.png" alt="Calendar"> Lịch</a></li>
             <hr> 
@@ -146,7 +146,7 @@
                     <p>Số điện thoại: <span>0912345678</span></p>
                     <p>Địa chỉ: <span>152 Lý Chính Thắng, Phường 7, Quận 3, Hồ Chí Minh</span></p>
                 </div>
-                <button class="edit-button">Chỉnh Sửa</button>
+                <button class="edit-button" onclick="window.location.href='owner_configure_field.html';">Chỉnh Sửa</button>
             </div>
             
         </div>
