Update nav bar and side bar

--- a/react-webpack/public/backend/templates/owner_calendar.html
+++ b/react-webpack/public/backend/templates/owner_calendar.html
@@ -90,13 +90,13 @@
       </div>
     </div>
     <div class="sidebar">
-        <a href="#" class="menu-item">
+        <a href="owner_dashboard" class="menu-item">
             <div class="icon">
                 <img src="{{ url_for('static', filename='images/icon_dashboard.png') }}" alt="Trang chủ Icon"/>
             </div>
             <div class="text">Trang chủ</div>
         </a>
-        <a href="#" class="menu-item">
+        <a href="owner_managefield" class="menu-item">
             <div class="icon">
                 <img src="{{ url_for('static', filename='images/icon_book_field.png') }}" alt="Quản Lí Sân Icon" />
             </div>
@@ -115,7 +115,7 @@
             <div class="text">Lịch sử giao dịch</div>
         </a>
     </div>
-
+    
     <div class="main-content">
       <div class="month-header">
     <div class="month-dropdown">
