--- a/react-webpack/public/backend/templates/owner_deposit.html
+++ b/react-webpack/public/backend/templates/owner_deposit.html
@@ -9,113 +9,113 @@
 
 </head>
 <body>
-    <div class="navbar_ngang">
-        <div class="logo-section">
+     <!-- nav bar -->
+     <div class="navbar_ngang">
+      <div class="logo-section">
+        <img
+          class="logo"
+          src="{{ url_for('static', filename='images/icon_sports_soccer.png') }}"
+        />
+        <div class="logo-text">
+          Sporty <br />
+          Webby
+        </div>
+      </div>
+      <div class="search-container">
+        <div class="search-box">
           <img
-            class="logo"
-            src="{{ url_for('static', filename='images/icon_sports_soccer.png') }}"
+            class="search-icon"
+            src="{{ url_for('static', filename='images/icon_search.png') }}"
           />
-          <div class="logo-text">
-            Sporty <br />
-            Webby
-          </div>
+          <input type="text" class="search-input" placeholder="Search" />
+          <button class="clear-btn">✖</button>
         </div>
-        <div class="search-container">
-          <div class="search-box">
-            <img
-              class="search-icon"
-              src="{{ url_for('static', filename='images/icon_search.png') }}"
-            />
-            <input type="text" class="search-input" placeholder="Search" />
-            <button class="clear-btn">✖</button>
-          </div>
-          <script>
-            const searchInput = document.querySelector(".search-input");
-            const clearBtn = document.querySelector(".clear-btn");
-    
-            clearBtn.addEventListener("click", () => {
-              searchInput.value = "";
-              searchInput.focus();
-            });
-          </script>
-        </div>
-        <div class="nav-links">
-          <a href="#" class="nav-item">Trang chủ</a>
-          <a href="#" class="nav-item">Bạn bè</a>
-          <a href="#" class="nav-item">Blog</a>
-        </div>
-        <div class="profile-section">
-          <div class="notification-icons">
-            <div class="bell-icon">
-              <img
-                src="{{ url_for('static', filename='images/icon_noti.png') }}"
-              />
-            </div>
-            <div class="message-icon">
-              <img
-                src="{{ url_for('static', filename='images/icon_chat.png') }}"
-              />
-            </div>
-          </div>
-          <div class="profile-info">
-            <img
-              class="profile-avatar"
-              src="{{ url_for('static', filename='images/avatar.png') }}"
-            />
-            <div class="profile-name">
-              <p>Trần Văn A</p>
-              <p class="status">Trực tuyến</p>
-            </div>
-          </div>
-          <div class="dropdown-arrow" onclick="toggleDropdown()">
-            <img
-              src="{{ url_for('static', filename='images/icon_arrow.png') }}"
-            />
-          </div>
-          <div class="dropdown-menu" id="dropdownMenu">
-            <ul>
-              <li><a href="#">Thông tin cá nhân</a></li>
-              <li><a href="#">Lịch sử hoạt động</a></li>
-              <li><a href="#">Bảo mật</a></li>
-              <li><a href="#">Cài đặt</a></li>
-              <li><a href="#">Năng suất</a></li>
-            </ul>
-          </div>
-          <script>
-            function toggleDropdown() {
-              var dropdownMenu = document.getElementById("dropdownMenu");
-              dropdownMenu.classList.toggle("show");
-            }
-          </script>
-        </div>
+        <script>
+          const searchInput = document.querySelector(".search-input");
+          const clearBtn = document.querySelector(".clear-btn");
+  
+          clearBtn.addEventListener("click", () => {
+            searchInput.value = "";
+            searchInput.focus();
+          });
+        </script>
       </div>
-      <div class="sidebar">
-          <a href="#" class="menu-item">
-              <div class="icon">
-                  <img src="{{ url_for('static', filename='images/icon_dashboard.png') }}" alt="Trang chủ Icon"/>
-              </div>
-              <div class="text">Trang chủ</div>
-          </a>
-          <a href="#" class="menu-item">
-              <div class="icon">
-                  <img src="{{ url_for('static', filename='images/icon_book_field.png') }}" alt="Quản Lí Sân Icon" />
-              </div>
-              <div class="text">Quản Lí Sân</div>
-          </a>
-          <a href="ownercalendar" class="menu-item">
-              <div class="icon">
-                  <img src="{{ url_for('static', filename='images/icon_calendar.png') }}" alt="Lịch Icon"/>
-              </div>
-              <div class="text">Lịch</div>
-          </a>
-          <a href="ownerdeposit" class="menu-item">
-              <div class="icon">
-                  <img src="{{ url_for('static', filename='images/icon_payment_history.png') }}" alt="Lịch sử giao dịch Icon"/>
-              </div>
-              <div class="text">Lịch sử giao dịch</div>
-          </a>
+      <div class="nav-links">
+        <a href="#" class="nav-item">Trang chủ</a>
+        <a href="#" class="nav-item">Bạn bè</a>
+        <a href="#" class="nav-item">Blog</a>
       </div>
-
+      <div class="profile-section">
+        <div class="notification-icons">
+          <div class="bell-icon">
+            <img
+              src="{{ url_for('static', filename='images/icon_noti.png') }}"
+            />
+          </div>
+          <div class="message-icon">
+            <img
+              src="{{ url_for('static', filename='images/icon_chat.png') }}"
+            />
+          </div>
+        </div>
+        <div class="profile-info">
+          <img
+            class="profile-avatar"
+            src="{{ url_for('static', filename='images/avatar.png') }}"
+          />
+          <div class="profile-name">
+            <p>Trần Văn A</p>
+            <p class="status">Trực tuyến</p>
+          </div>
+        </div>
+        <div class="dropdown-arrow" onclick="toggleDropdown()">
+          <img
+            src="{{ url_for('static', filename='images/icon_arrow.png') }}"
+          />
+        </div>
+        <div class="dropdown-menu" id="dropdownMenu">
+          <ul>
+            <li><a href="#">Thông tin cá nhân</a></li>
+            <li><a href="#">Lịch sử hoạt động</a></li>
+            <li><a href="#">Bảo mật</a></li>
+            <li><a href="#">Cài đặt</a></li>
+            <li><a href="#">Năng suất</a></li>
+          </ul>
+        </div>
+        <script>
+          function toggleDropdown() {
+            var dropdownMenu = document.getElementById('dropdownMenu');
+            dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+          }
+        </script>
+      </div>
+    </div>
+    <div class="sidebar">
+        <a href="owner_dashboard" class="menu-item">
+            <div class="icon">
+                <img src="{{ url_for('static', filename='images/icon_dashboard.png') }}" alt="Trang chủ Icon"/>
+            </div>
+            <div class="text">Trang chủ</div>
+        </a>
+        <a href="owner_managefield" class="menu-item">
+            <div class="icon">
+                <img src="{{ url_for('static', filename='images/icon_book_field.png') }}" alt="Quản Lí Sân Icon" />
+            </div>
+            <div class="text">Quản Lí Sân</div>
+        </a>
+        <a href="ownercalendar" class="menu-item">
+            <div class="icon">
+                <img src="{{ url_for('static', filename='images/icon_calendar.png') }}" alt="Lịch Icon"/>
+            </div>
+            <div class="text">Lịch</div>
+        </a>
+        <a href="ownerdeposit" class="menu-item">
+            <div class="icon">
+                <img src="{{ url_for('static', filename='images/icon_payment_history.png') }}" alt="Lịch sử giao dịch Icon"/>
+            </div>
+            <div class="text">Lịch sử giao dịch</div>
+        </a>
+    </div>
       <div class="content-container">
         <h2>Lịch sử giao dịch</h2>
         <div class="balance">
