--- a/react-webpack/public/backend/static/css/owner_dashboard.css
+++ b/react-webpack/public/backend/static/css/owner_dashboard.css
@@ -138,9 +138,13 @@ hr {
 /* -------------------------END OF TEMPLATE----------------------------------*/
 
 .main-content {
-        margin-left: 200px; /* Adjust according to the sidebar width */
-        margin-top: 80px; /* Add space for the fixed header */
-        padding: 20px;
+    margin-left: 220px; /* Adjust for sidebar width */
+    margin-top: 40px; /* Adjust for fixed header */
+    padding: 20px;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 80px); /* Ensure it spans the full viewport */
 }
 
 .statistics {
@@ -148,7 +152,7 @@ hr {
     padding: 5px 10px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    height: 50px;
+    height: 130px;
     
 }
 
@@ -517,3 +521,6 @@ hr {
     flex-shrink: 0;
 }
 
+.graph{
+    width: 100%;
+}
