--- a/react-webpack/public/backend/templates/owner_managefield.html
+++ b/react-webpack/public/backend/templates/owner_managefield.html
@@ -200,7 +200,7 @@
             </div>
             <div class="field-list">
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -248,7 +248,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="field-item">
-                    <a href="owner_configure_field.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
