--- a/react-webpack/public/backend/templates/owner_view_field_more.html
+++ b/react-webpack/public/backend/templates/owner_view_field_more.html
@@ -221,7 +221,7 @@
                     <p>Số điện thoại: <span>0912345678</span></p>
                     <p>Địa chỉ: <span>152 Lý Chính Thắng, Phường 7, Quận 3, Hồ Chí Minh</span></p>
                 </div>
-                <button class="edit-button">Chỉnh Sửa</button>
+                <a href="owner_configure_field" class="edit-button">Chỉnh Sửa</a>
             </div>
             
         </div>
