--- a/react-webpack/public/backend/templates/owner_managefield.html
+++ b/react-webpack/public/backend/templates/owner_managefield.html
@@ -194,7 +194,7 @@
                 <h2>Sân của tôi</h2>
                 <div class="field-controls">
                     <input type="text" placeholder="Search" class="search-bar">
-                    <button class="add-field-btn" onclick="window.location.href='owner_register_field.html';">+</button>
+                    <button class="add-field-btn" onclick="window.location.href='owner_register_field';">+</button>
                     <button class="filter-btn">🔍 Lọc</button>
                 </div>
             </div>
