--- a/react-webpack/public/backend/templates/owner_register_field.html
+++ b/react-webpack/public/backend/templates/owner_register_field.html
@@ -165,9 +165,9 @@
         
                 <!-- Block 6: Buttons -->
                 <div class="form-buttons">
-                    <button type="button" class="cancel-button" onclick="window.location.href='owner_managefield.html';">Hủy</button>
+                    <button type="button" class="cancel-button" onclick="window.location.href='owner_managefield';">Hủy</button>
 
-                    <button type="button" class="save-button" onclick="window.location.href='owner_managefield.html';">Đăng ký</button>
+                    <button type="button" class="save-button" onclick="window.location.href='owner_managefield';">Đăng ký</button>
                 </div>
             </form>
         </div>
