3:30pm 09/01/2025 hot fix

--- a/react-webpack/public/backend/templates/owner_configure_field.html
+++ b/react-webpack/public/backend/templates/owner_configure_field.html
@@ -167,7 +167,7 @@
                 <div class="form-buttons">
                     <button type="button" class="cancel-button" onclick="window.location.href='owner_managefield';">Hủy</button>
 
-                    <button type="button" class="save-button" onclick="window.location.href='owner_managefield.html';">Lưu</button>
+                    <button type="button" class="save-button" onclick="window.location.href='owner_managefield';">Lưu</button>
                 </div>
             </form>
         </div>
