--- a/react-webpack/public/backend/templates/owner_managefield.html
+++ b/react-webpack/public/backend/templates/owner_managefield.html
@@ -200,7 +200,7 @@
             </div>
             <div class="field-list">
                 <div class="field-item">
-                    <a href="owner_view_field_more.html" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
+                    <a href="owner_view_field_more" ><img src="../static/images/field1.png" alt="Field Image" class="field-image">                    
                     </a>
                     <div class="field-details">
                         <h4>Sân bóng đá trong nhà Lý Chính Thắng</h4>
