--- a/react-webpack/public/backend/templates/deposit.html
+++ b/react-webpack/public/backend/templates/deposit.html
@@ -49,7 +49,7 @@
       </div>
       <!-- Navigation Links -->
       <div class="nav-links">
-        <a href="#" class="nav-item" style="width: 90px">Trang chủ</a>
+        <a href="#" class="nav-item" style="width: 90px" onclick="navigateTo('user_homescreen')">Trang chủ</a>
         <a href="#" class="nav-item" style="width: 60px">Bạn bè</a>
         <a href="#" class="nav-item">Blog</a>
       </div>
@@ -108,7 +108,7 @@
     <div class="main-wrapper">
       <!-- side bar -->
       <div class="sidebar">
-        <div class="menu-item">
+        <div class="menu-item" onclick="navigateTo('user_dashboard')">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_dashboard.png') }}"
@@ -116,7 +116,7 @@
           </div>
           <div class="text">Bảng điều khiển</div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" onclick="navigateTo('user_bookfield')">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_book_field.png') }}"
@@ -124,7 +124,7 @@
           </div>
           <div class="text">Đặt sân</div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" onclick="navigateTo('booking_history')">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_history_book_field.png') }}"
@@ -133,7 +133,7 @@
           </div>
           <div class="text">Lịch sử đặt sân</div>
         </div>
-        <div class="menu-item" style="background-color: rgb(14, 1, 87)">
+        <div class="menu-item" style="background-color: rgb(14, 1, 87)" onclick="navigateTo('deposit')">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_deposit.png') }}"
@@ -141,7 +141,7 @@
           </div>
           <div class="text">Nạp tiền</div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" onclick="navigateTo('transaction_history')">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_payment_history.png') }}"
@@ -438,5 +438,12 @@
         }
       }
     </script>
+    <script>
+      function navigateTo(page) {
+        // Chuyển hướng đến trang được chỉ định
+        window.location.href = page;
+      }
+    </script>
+    
   </body>
 </html>
