--- a/react-webpack/public/backend/templates/index.html
+++ b/react-webpack/public/backend/templates/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <!-- Form đăng nhập -->
-      <form class="login-form" autocomplete="off">
+      <form class="login-form" method="POST" action="/" autocomplete="off">
         <!-- Ẩn auto-fill của trình duyệt -->
         <input
           type="text"
