--- a/react-webpack/public/backend/templates/bookfield_info.html
+++ b/react-webpack/public/backend/templates/bookfield_info.html
@@ -107,23 +107,28 @@
 		<div class="main-wrapper">
 			<!-- side bar -->
 			<div class="sidebar">
-				<div class="menu-item">
+				<div
+					class="menu-item"
+					onclick="window.location.href = 'user_dashboard'">
 					<div class="icon">
 						<img
 							src="{{ url_for('static', filename='images/icon_dashboard.png') }}" />
 					</div>
 					<div class="text">Bảng điều khiển</div>
 				</div>
-				<div class="menu-item">
+				<div
+					class="menu-item"
+					onclick="window.location.href = 'user_bookfield'"
+					style="background-color: rgb(14, 1, 87)">
 					<div class="icon">
 						<img
 							src="{{ url_for('static', filename='images/icon_book_field.png') }}" />
 					</div>
-					<div class="text" style="background-color: rgb(14, 1, 87)">
-						Đặt sân
-					</div>
+					<div class="text">Đặt sân</div>
 				</div>
-				<div class="menu-item">
+				<div
+					class="menu-item"
+					onclick="window.location.href = 'booking_history'">
 					<div class="icon">
 						<img
 							src="{{ url_for('static', filename='images/icon_history_book_field.png') }}"
@@ -131,14 +136,16 @@
 					</div>
 					<div class="text">Lịch sử đặt sân</div>
 				</div>
-				<div class="menu-item">
+				<div class="menu-item" onclick="window.location.href = 'deposit'">
 					<div class="icon">
 						<img
 							src="{{ url_for('static', filename='images/icon_deposit.png') }}" />
 					</div>
 					<div class="text">Nạp tiền</div>
 				</div>
-				<div class="menu-item">
+				<div
+					class="menu-item"
+					onclick="window.location.href = 'transaction_history'">
 					<div class="icon">
 						<img
 							src="{{ url_for('static', filename='images/icon_payment_history.png') }}" />
